Controller de match e lógica de match na curtida

--- a/PSF.Servico/PSF.Servico.csproj
+++ b/PSF.Servico/PSF.Servico.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\PSF.Dados\PSF.Dados.csproj" />
+    <ProjectReference Include="..\PSF.Dominio\PSF.Dominio.csproj" />
   </ItemGroup>
 
 </Project>
